k8s/Institute_be_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: institute-backend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: institute-backend

  template:
    metadata:
      labels:
        app: institute-backend

    spec:
      containers:
        - name: institute-backend
          image: institute_be:1.0.3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8085
