k8s/Institute_be_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: institute-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: institute.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: institute-backend-service
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: institute-fe
                port:
                  number: 80
